--- a/src/components/issues/IssueOpener.astro
+++ b/src/components/issues/IssueOpener.astro
@@ -1,8 +1,8 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import SectionTag from './SectionTag.astro';
-import PostCard from './PostCard.astro';
-import BriefRail from './BriefRail.astro';
+import SectionTag from '../ui/SectionTag.astro';
+import PostCard from '../posts/PostCard.astro';
+import BriefRail from '../posts/BriefRail.astro';
 
 interface Props {
   issue: CollectionEntry<'issues'>;
