--- a/src/components/layout/Layout.astro
+++ b/src/components/layout/Layout.astro
@@ -3,8 +3,8 @@ import MastheadBar from './MastheadBar.astro';
 import type { CollectionEntry } from 'astro:content';
 import PageFrame from './PageFrame.astro';
 
-import '../styles/tailwind.css';
-import '../styles/global.css';
+import '../../styles/tailwind.css';
+import '../../styles/global.css';
 
 interface Props {
   title?: string;
