--- a/src/components/posts/PostCard.astro
+++ b/src/components/posts/PostCard.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import SectionTag from './SectionTag.astro';
+import SectionTag from '../ui/SectionTag.astro';
 
 interface Props {
   post: CollectionEntry<'posts'> & { readingTimeMinutes?: number };
