--- a/src/pages/issues/index.astro
+++ b/src/pages/issues/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '../../components/Layout.astro';
-import PageFrame from '../../components/PageFrame.astro';
-import IssueCoverCard from '../../components/IssueCoverCard.astro';
+import Layout from '../../components/layout/Layout.astro';
+import PageFrame from '../../components/layout/PageFrame.astro';
+import IssueCoverCard from '../../components/issues/IssueCoverCard.astro';
 import { getCollection, getEntry } from 'astro:content';
 import { getPostsForIssue } from '../../lib/contentSource';
 import { coverLinesFromPosts } from '../../lib/lineup';
