--- a/src/components/issues/Toc.astro
+++ b/src/components/issues/Toc.astro
@@ -1,5 +1,5 @@
 ---
-import SectionTag from './SectionTag.astro';
+import SectionTag from '../ui/SectionTag.astro';
 import type { CollectionEntry } from 'astro:content';
 
 interface Props {
